--- a/Blind/res/layout/activity_login.xml
+++ b/Blind/res/layout/activity_login.xml
@@ -38,6 +38,19 @@
             android:background="@drawable/password"
             android:layout_margin="10dp"/>
 
+       <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" 
+            android:gravity="center|center_horizontal|center_vertical">
+
+           <CheckBox
+               android:id="@+id/family"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="Family" />
+
+        </LinearLayout>
+
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
